# recommendor_on_amazon_review

./: .gitignore  README.md  check.ipynb  docker-compose.yaml  download.py  main.py  preprocess.py  preprocess_run.py
api/: Dockerfile  main.py  pyproject.toml  repository.py  service.py
dataset/: download.sh  preprocess.py  preprocess2.py
engine/: .dockerignore  Dockerfile  README.md  configs.py  ddp_util.py  logger.py  main.py  preprocess.py  pyproject.toml  requirements.txt  run_train.py  run_train.sh  trainer.py
engine/data/: dataset.py
engine/datasets/: review.py
engine/models/: ncf.py  transformer.py  transformer_cls.py  transformer_reg.py  transformer_reg2.py  transformer_reg3.py  transformer_reg4.py  transformer_reg5.py  transformer_reg6.py
engine/models/embedding/: product.py  rating.py
engine/models/encoder/: transformer.py
engine/scripts/: run_train.py  store_vector.py
engine/train/: configs.py  logger.py  trainer.py
engine/trainers/: base.py  classification.py  regression.py
engine/vector_db/: product.py
exp/: exp1.py
preprocess/: pearson_sim.py
sql/: init.sql  update_top_products.sql
