[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Wonbin Kim <kwb0711@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.1.0"
python-dotenv = "^1.0.1"
SQLAlchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
