[tool.poetry]
name = "engine"
version = "0.1.0"
description = ""
authors = ["Wonbin Kim <kwb0711@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
SQLAlchemy = "^2.0.36"
wandb = "^0.19.0"
psycopg2-binary = "^2.9.10"
chromadb = "^0.5.23"
Flask = "^3.1.0"
torch = "2.2.2"
numpy = "1.26.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
